parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOSTROPHE
    BREAK
    CASE
    CLASS
    COLON
    COMMA
    COMMENTS
    COMMENTS_C99
    CONST
    DEQUAL
    DISTINT
    DO
    DOT
    FALSE
    FOR
    INT
    LBRACKET
    MAIN
    MINUSEQUAL
    MINUSMINUS
    PLUSEQUAL
    PLUSPLUS
    PRINT
    QUOTES
    RBRACKET
    RETURN
    STATIC
    STRING
    SWITCH
    TRUE
    VOID
    WHILE

Grammar

Rule 0     S' -> declaracion
Rule 1     declaracion -> IF LPAREN expresion GREATER expresion RPAREN LBLOCK expresion SEMI RBLOCK
Rule 2     declaracion -> ELSE LBLOCK expresion SEMI RBLOCK
Rule 3     declaracion -> VAR expresion EQUAL expresion SEMI
Rule 4     declaracion -> OPENTAG
Rule 5     declaracion -> CLOSETAG
Rule 6     declaracion -> expresion SEMI
Rule 7     expresion -> expresion PLUS expresion
Rule 8     expresion -> expresion MINUS expresion
Rule 9     expresion -> expresion TIMES expresion
Rule 10    expresion -> expresion DIVIDE expresion
Rule 11    expresion -> expresion addop NUM
Rule 12    expresion -> NUM addop expresion
Rule 13    addop -> PLUS
Rule 14    addop -> MINUS
Rule 15    addop -> TIMES
Rule 16    addop -> DIVIDE
Rule 17    expresion -> MINUS expresion
Rule 18    expresion -> LPAREN expresion RPAREN
Rule 19    expresion -> LBLOCK expresion RBLOCK
Rule 20    expresion -> expresion LESS expresion
Rule 21    expresion -> expresion GREATER expresion
Rule 22    expresion -> expresion LESSEQUAL expresion
Rule 23    expresion -> expresion GREATEREQUAL expresion
Rule 24    expresion -> expresion EQUAL expresion
Rule 25    expresion -> expresion ISEQUAL expresion
Rule 26    expresion -> LPAREN expresion LESS expresion RPAREN
Rule 27    expresion -> LPAREN expresion GREATER expresion RPAREN
Rule 28    expresion -> LPAREN expresion LESSEQUAL expresion RPAREN
Rule 29    expresion -> LPAREN expresion GREATEREQUAL expresion RPAREN
Rule 30    expresion -> LPAREN expresion EQUAL expresion RPAREN
Rule 31    expresion -> LPAREN expresion ISEQUAL expresion RPAREN
Rule 32    expresion -> NUM
Rule 33    expresion -> ID

Terminals, with rules where they appear

APOSTROPHE           : 
BREAK                : 
CASE                 : 
CLASS                : 
CLOSETAG             : 5
COLON                : 
COMMA                : 
COMMENTS             : 
COMMENTS_C99         : 
CONST                : 
DEQUAL               : 
DISTINT              : 
DIVIDE               : 10 16
DO                   : 
DOT                  : 
ELSE                 : 2
EQUAL                : 3 24 30
FALSE                : 
FOR                  : 
GREATER              : 1 21 27
GREATEREQUAL         : 23 29
ID                   : 33
IF                   : 1
INT                  : 
ISEQUAL              : 25 31
LBLOCK               : 1 2 19
LBRACKET             : 
LESS                 : 20 26
LESSEQUAL            : 22 28
LPAREN               : 1 18 26 27 28 29 30 31
MAIN                 : 
MINUS                : 8 14 17
MINUSEQUAL           : 
MINUSMINUS           : 
NUM                  : 11 12 32
OPENTAG              : 4
PLUS                 : 7 13
PLUSEQUAL            : 
PLUSPLUS             : 
PRINT                : 
QUOTES               : 
RBLOCK               : 1 2 19
RBRACKET             : 
RETURN               : 
RPAREN               : 1 18 26 27 28 29 30 31
SEMI                 : 1 2 3 6
STATIC               : 
STRING               : 
SWITCH               : 
TIMES                : 9 15
TRUE                 : 
VAR                  : 3
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

addop                : 11 12
declaracion          : 0
expresion            : 1 1 1 2 3 3 6 7 7 8 8 9 9 10 10 11 12 17 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31

Parsing method: LALR

state 0

    (0) S' -> . declaracion
    (1) declaracion -> . IF LPAREN expresion GREATER expresion RPAREN LBLOCK expresion SEMI RBLOCK
    (2) declaracion -> . ELSE LBLOCK expresion SEMI RBLOCK
    (3) declaracion -> . VAR expresion EQUAL expresion SEMI
    (4) declaracion -> . OPENTAG
    (5) declaracion -> . CLOSETAG
    (6) declaracion -> . expresion SEMI
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    IF              shift and go to state 2
    ELSE            shift and go to state 6
    VAR             shift and go to state 7
    OPENTAG         shift and go to state 8
    CLOSETAG        shift and go to state 9
    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    declaracion                    shift and go to state 1
    expresion                      shift and go to state 4

state 1

    (0) S' -> declaracion .



state 2

    (1) declaracion -> IF . LPAREN expresion GREATER expresion RPAREN LBLOCK expresion SEMI RBLOCK

    LPAREN          shift and go to state 13


state 3

    (18) expresion -> LPAREN . expresion RPAREN
    (26) expresion -> LPAREN . expresion LESS expresion RPAREN
    (27) expresion -> LPAREN . expresion GREATER expresion RPAREN
    (28) expresion -> LPAREN . expresion LESSEQUAL expresion RPAREN
    (29) expresion -> LPAREN . expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> LPAREN . expresion EQUAL expresion RPAREN
    (31) expresion -> LPAREN . expresion ISEQUAL expresion RPAREN
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 14

state 4

    (6) declaracion -> expresion . SEMI
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion
    (9) expresion -> expresion . TIMES expresion
    (10) expresion -> expresion . DIVIDE expresion
    (11) expresion -> expresion . addop NUM
    (20) expresion -> expresion . LESS expresion
    (21) expresion -> expresion . GREATER expresion
    (22) expresion -> expresion . LESSEQUAL expresion
    (23) expresion -> expresion . GREATEREQUAL expresion
    (24) expresion -> expresion . EQUAL expresion
    (25) expresion -> expresion . ISEQUAL expresion
    (13) addop -> . PLUS
    (14) addop -> . MINUS
    (15) addop -> . TIMES
    (16) addop -> . DIVIDE

    SEMI            shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19
    LESS            shift and go to state 21
    GREATER         shift and go to state 22
    LESSEQUAL       shift and go to state 23
    GREATEREQUAL    shift and go to state 24
    EQUAL           shift and go to state 25
    ISEQUAL         shift and go to state 26

    addop                          shift and go to state 20

state 5

    (19) expresion -> LBLOCK . expresion RBLOCK
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 27

state 6

    (2) declaracion -> ELSE . LBLOCK expresion SEMI RBLOCK

    LBLOCK          shift and go to state 28


state 7

    (3) declaracion -> VAR . expresion EQUAL expresion SEMI
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 29

state 8

    (4) declaracion -> OPENTAG .

    $end            reduce using rule 4 (declaracion -> OPENTAG .)


state 9

    (5) declaracion -> CLOSETAG .

    $end            reduce using rule 5 (declaracion -> CLOSETAG .)


state 10

    (17) expresion -> MINUS . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 30

state 11

    (12) expresion -> NUM . addop expresion
    (32) expresion -> NUM .
    (13) addop -> . PLUS
    (14) addop -> . MINUS
    (15) addop -> . TIMES
    (16) addop -> . DIVIDE

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 32 (expresion -> NUM .)
    LESS            reduce using rule 32 (expresion -> NUM .)
    GREATER         reduce using rule 32 (expresion -> NUM .)
    LESSEQUAL       reduce using rule 32 (expresion -> NUM .)
    GREATEREQUAL    reduce using rule 32 (expresion -> NUM .)
    EQUAL           reduce using rule 32 (expresion -> NUM .)
    ISEQUAL         reduce using rule 32 (expresion -> NUM .)
    RPAREN          reduce using rule 32 (expresion -> NUM .)
    RBLOCK          reduce using rule 32 (expresion -> NUM .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35

  ! PLUS            [ reduce using rule 32 (expresion -> NUM .) ]
  ! MINUS           [ reduce using rule 32 (expresion -> NUM .) ]
  ! TIMES           [ reduce using rule 32 (expresion -> NUM .) ]
  ! DIVIDE          [ reduce using rule 32 (expresion -> NUM .) ]

    addop                          shift and go to state 31

state 12

    (33) expresion -> ID .

    SEMI            reduce using rule 33 (expresion -> ID .)
    PLUS            reduce using rule 33 (expresion -> ID .)
    MINUS           reduce using rule 33 (expresion -> ID .)
    TIMES           reduce using rule 33 (expresion -> ID .)
    DIVIDE          reduce using rule 33 (expresion -> ID .)
    LESS            reduce using rule 33 (expresion -> ID .)
    GREATER         reduce using rule 33 (expresion -> ID .)
    LESSEQUAL       reduce using rule 33 (expresion -> ID .)
    GREATEREQUAL    reduce using rule 33 (expresion -> ID .)
    EQUAL           reduce using rule 33 (expresion -> ID .)
    ISEQUAL         reduce using rule 33 (expresion -> ID .)
    RPAREN          reduce using rule 33 (expresion -> ID .)
    RBLOCK          reduce using rule 33 (expresion -> ID .)


state 13

    (1) declaracion -> IF LPAREN . expresion GREATER expresion RPAREN LBLOCK expresion SEMI RBLOCK
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 36

state 14

    (18) expresion -> LPAREN expresion . RPAREN
    (26) expresion -> LPAREN expresion . LESS expresion RPAREN
    (27) expresion -> LPAREN expresion . GREATER expresion RPAREN
    (28) expresion -> LPAREN expresion . LESSEQUAL expresion RPAREN
    (29) expresion -> LPAREN expresion . GREATEREQUAL expresion RPAREN
    (30) expresion -> LPAREN expresion . EQUAL expresion RPAREN
    (31) expresion -> LPAREN expresion . ISEQUAL expresion RPAREN
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion
    (9) expresion -> expresion . TIMES expresion
    (10) expresion -> expresion . DIVIDE expresion
    (11) expresion -> expresion . addop NUM
    (20) expresion -> expresion . LESS expresion
    (21) expresion -> expresion . GREATER expresion
    (22) expresion -> expresion . LESSEQUAL expresion
    (23) expresion -> expresion . GREATEREQUAL expresion
    (24) expresion -> expresion . EQUAL expresion
    (25) expresion -> expresion . ISEQUAL expresion
    (13) addop -> . PLUS
    (14) addop -> . MINUS
    (15) addop -> . TIMES
    (16) addop -> . DIVIDE

    RPAREN          shift and go to state 37
    LESS            shift and go to state 38
    GREATER         shift and go to state 39
    LESSEQUAL       shift and go to state 40
    GREATEREQUAL    shift and go to state 41
    EQUAL           shift and go to state 42
    ISEQUAL         shift and go to state 43
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 19

    addop                          shift and go to state 20

state 15

    (6) declaracion -> expresion SEMI .

    $end            reduce using rule 6 (declaracion -> expresion SEMI .)


state 16

    (7) expresion -> expresion PLUS . expresion
    (13) addop -> PLUS .
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             reduce using rule 13 (addop -> PLUS .)
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

  ! NUM             [ shift and go to state 11 ]

    expresion                      shift and go to state 44

state 17

    (8) expresion -> expresion MINUS . expresion
    (14) addop -> MINUS .
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             reduce using rule 14 (addop -> MINUS .)
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

  ! NUM             [ shift and go to state 11 ]

    expresion                      shift and go to state 45

state 18

    (9) expresion -> expresion TIMES . expresion
    (15) addop -> TIMES .
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             reduce using rule 15 (addop -> TIMES .)
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

  ! NUM             [ shift and go to state 11 ]

    expresion                      shift and go to state 46

state 19

    (10) expresion -> expresion DIVIDE . expresion
    (16) addop -> DIVIDE .
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             reduce using rule 16 (addop -> DIVIDE .)
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

  ! NUM             [ shift and go to state 11 ]

    expresion                      shift and go to state 47

state 20

    (11) expresion -> expresion addop . NUM

    NUM             shift and go to state 48


state 21

    (20) expresion -> expresion LESS . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 49

state 22

    (21) expresion -> expresion GREATER . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 50

state 23

    (22) expresion -> expresion LESSEQUAL . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 51

state 24

    (23) expresion -> expresion GREATEREQUAL . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . expresion TIMES expresion
    (10) expresion -> . expresion DIVIDE expresion
    (11) expresion -> . expresion addop NUM
    (12) expresion -> . NUM addop expresion
    (17) expresion -> . MINUS expresion
    (18) expresion -> . LPAREN expresion RPAREN
    (19) expresion -> . LBLOCK expresion RBLOCK
    (20) expresion -> . expresion LESS expresion
    (21) expresion -> . expresion GREATER expresion
    (22) expresion -> . expresion LESSEQUAL expresion
    (23) expresion -> . expresion GREATEREQUAL expresion
    (24) expresion -> . expresion EQUAL expresion
    (25) expresion -> . expresion ISEQUAL expresion
    (26) expresion -> . LPAREN expresion LESS expresion RPAREN
    (27) expresion -> . LPAREN expresion GREATER expresion RPAREN
    (28) expresion -> . LPAREN expresion LESSEQUAL expresion RPAREN
    (29) expresion -> . LPAREN expresion GREATEREQUAL expresion RPAREN
    (30) expresion -> . LPAREN expresion EQUAL expresion RPAREN
    (31) expresion -> . LPAREN expresion ISEQUAL expresion RPAREN
    (32) expresion -> . NUM
    (33) expresion -> . ID

    NUM             shift and go to state 11
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 3
    LBLOCK          shift and go to state 5
    ID              shift and go to state 12

    expresion                      shift and go to state 52

state 25
